[package]
name = "rust_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[[bin]]
name = "guessing_game"
path = "src/Chapter2/guessing_game.rs"

[[bin]]
name = "condition_processing"
path = "src/Chapter3/condition_processing.rs"

[[bin]]
name = "data_type"
path = "src/Chapter3/data_type.rs"

[[bin]]
name = "function"
path = "src/Chapter3/function.rs"

[[bin]]
name = "variables"
path = "src/Chapter3/variables.rs"

[[bin]]
name = "ownership"
path = "src/Chapter4/ownership.rs"

[[bin]]
name = "reference_and_borrow"
path = "src/Chapter4/reference_and_borrow.rs"

[[bin]]
name = "slice"
path = "src/Chapter4/slice.rs"

[[bin]]
name = "struct_define"
path = "src/Chapter5/struct_define.rs"

[[bin]]
name = "struct_example"
path = "src/Chapter5/struct_example.rs"

[[bin]]
name = "method"
path = "src/Chapter5/method.rs"

[[bin]]
name = "define_enum"
path = "src/Chapter6/define_enum.rs"

[[bin]]
name = "match_control"
path = "src/Chapter6/match_control.rs"

[[bin]]
name = "lib"
path = "src/Chapter7/lib.rs"

[[bin]]
name = "use"
path = "src/Chapter7/use.rs"

[[bin]]
name = "vector"
path = "src/Chapter8/vector.rs"

[[bin]]
name = "string"
path = "src/Chapter8/string.rs"

[[bin]]
name = "hashmap"
path = "src/Chapter8/hashmap.rs"

[[bin]]
name = "panic"
path = "src/Chapter9/panic.rs"

[[bin]]
name = "result"
path = "src/Chapter9/result.rs"

